TTK-20740 fix show volumen range on IE11
Cherry-pick of https://github.com/teltek/PuMuKIT2-paella-player-bundle/pull/84/commits/678160cda93db27f0075ee50fbfe373f9713be6a

--- a/plugins/es.teltek.paella.simpleSoundControlPlugin/simpleSoundControl.less
+++ b/plugins/es.teltek.paella.simpleSoundControlPlugin/simpleSoundControl.less
@@ -118,3 +118,11 @@ input[type=range]:focus::-ms-fill-upper {
   background: #cc0000;
   outline: none;
 }
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .range input[type=range] {
+        margin: 0 !important;
+        max-height: 100% !important;
+        padding-top: 0;
+    }
+}
